# tgbot

./: .gitignore  CONTRIBUTING.md  README.md  dune-project  tgbot-api.opam  tgbot.opam
examples/: README.md  dune  echobot.ml  getme.ml  getupdates.ml  lowlevel_echobot.ml
examples/echobot/: dune  echobot.ml
lib/: bot.ml  client.ml  context.ml  dispatcher.ml  dune  handler.ml  logger.ml  long_polling.ml  tgbot.ml  utils.ml
lib/api/: dune  methods.ml  response.ml  tg_bot_api.ml  tgbot_api.ml  types.ml
wrapper/: bot_api.ml  dune  response.ml  types.ml
